opensbi: use sg2042-v1.4
Signed-off-by: Han Gao <gaohan@iscas.ac.cn>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,9 @@ jobs:
       - name: Checkout opensbi
         uses: actions/checkout@v4
         with:
-          repository: sophgo/opensbi
+          repository: revyos/opensbi
           path: opensbi
+          ref: sg2042-v1.4
 
       - name: Checkout sophgo-edk2
         uses: actions/checkout@v4
