--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         M_CHIP_NUM: [single, multi]
-        LINUX_BRANCH: [sg2042-dev, sg2042-dev-6.6]
+        LINUX_BRANCH: [sg2042-v6.1-lts, sg2042-v6.6-lts-v0p7]
 
     env:
       mainline_toolchain: https://github.com/riscv-collab/riscv-gnu-toolchain/releases/download/2024.03.01
@@ -56,7 +56,7 @@ jobs:
       - name: Checkout linux-riscv
         uses: actions/checkout@v4
         with:
-          repository: sophgo/linux-riscv
+          repository: revyos/sg2042-vendor-kernel
           path: linux-riscv
           ref: ${{ matrix.LINUX_BRANCH }}
 
