Revert "opensbi: use sg2042-v1.4"
This reverts commit 91cd3dfcf854563f04ff333bdad8d10f22c71a60.

Signed-off-by: Han Gao <gaohan@iscas.ac.cn>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,8 @@ jobs:
       - name: Checkout opensbi
         uses: actions/checkout@v4
         with:
-          repository: revyos/opensbi
+          repository: sophgo/opensbi
           path: opensbi
-          ref: sg2042-v1.4
 
       - name: Checkout sophgo-edk2
         uses: actions/checkout@v4
